--- a/roles/stream-delta/tasks/main.yml
+++ b/roles/stream-delta/tasks/main.yml
@@ -1,4 +1,35 @@
 ---
+- name: Stream-Delta DNS setup
+  tags:
+    - stream-delta
+    - aws
+  block:
+    - name: Voyeur.istic.net - A
+      amazon.aws.route53:
+        overwrite: true
+        command: present
+        zone: istic.net
+        record: voyeur.istic.net.
+        type: A
+        ttl: "300"
+        value: "{{ atoll_ip }}"
+        aws_profile: istic
+      tags:
+        - istic_net
+
+    - name: Ws.voyeur.istic.net - A
+      amazon.aws.route53:
+        overwrite: true
+        command: present
+        zone: istic.net
+        record: ws.voyeur.istic.net.
+        type: A
+        ttl: "300"
+        value: "{{ atoll_ip }}"
+        aws_profile: istic
+      tags:
+        - istic_net
+
 - name: Ensure Github is present in known_host
   tags:
     - stream-delta
