Rename task for deploying Stream Delta in deploy-stream-delta.yml

--- a/deploy-stream-delta.yml
+++ b/deploy-stream-delta.yml
@@ -21,7 +21,7 @@
   roles:
     - { role: water-gkhs-nginx, tags: nginx }
 
-- name: Hello Atoll
+- name: Deploy Stream Delta
   hosts: atoll
   handlers:
     - name: Import global handlers
