--- a/roles/stream-delta/tasks/main.yml
+++ b/roles/stream-delta/tasks/main.yml
@@ -1,4 +1,42 @@
 ---
+- name: Stream-Delta DNS setup
+  tags:
+    - stream-delta
+    - aws
+  block:
+    - name: Voyeur.istic.net - A
+      amazon.aws.route53:
+        overwrite: true
+        command: present
+        zone: istic.net
+        record: voyeur.istic.net.
+        type: A
+        ttl: "300"
+        value: "{{ atoll_ip }}"
+        aws_profile: istic
+      tags:
+        - istic_net
+
+    - name: Ws.voyeur.istic.net - A
+      amazon.aws.route53:
+        overwrite: true
+        command: present
+        zone: istic.net
+        record: ws.voyeur.istic.net.
+        type: A
+        ttl: "300"
+        value: "{{ atoll_ip }}"
+        aws_profile: istic
+      tags:
+        - istic_net
+  rescue:
+    - name: "Failure warning"
+      ansible.builtin.debug:
+        msg: "AWS tasks failed"
+    - name: "Failure execution"
+      ansible.builtin.command:
+        cmd: "false"
+
 - name: Ensure Github is present in known_host
   tags:
     - stream-delta
@@ -108,6 +146,7 @@
     - stream-delta
     - git
     - checkout
+    - stream-delta_deploy
   register: stream_delta_checkout
   notify:
     - Restart supervisor
@@ -119,7 +158,9 @@
     group: www-data
     state: directory
     recurse: true
-
+  tags:
+    - stream-delta
+    - stream-delta_deploy
 - name: Copy stream delta environment file
   ansible.builtin.template:
     src: templates/production.env.j2
@@ -128,6 +169,7 @@
     owner: stream-delta
   tags:
     - stream-delta
+    - stream-delta_deploy
   notify:
     - Restart supervisor
 
@@ -139,6 +181,7 @@
   become_user: stream-delta
   tags:
     - stream-delta
+    - stream-delta_deploy
   when: stream_delta_checkout.changed
   notify:
     - Restart supervisor
@@ -150,6 +193,7 @@
   become_user: stream-delta
   tags:
     - stream-delta
+    - stream-delta_deploy
   when: stream_delta_checkout.changed
   notify:
     - Restart supervisor
@@ -173,6 +217,7 @@
   when: stream_delta_checkout.changed
   tags:
     - stream-delta
+    - stream-delta_deploy
   notify:
     - Restart supervisor
 
