Remove obsolete Ubuntu archive and security source files if they exist

--- a/roles/water-gkhs-common/tasks/main.yml
+++ b/roles/water-gkhs-common/tasks/main.yml
@@ -33,6 +33,31 @@
   tags:
     - certbot
 
+#/etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.list
+#/etc/apt/sources.list.d/security_ubuntu_com_ubuntu.list /etc/apt/sources.list.d/security_ubuntu_com_ubuntu.sources
+
+- name: Check if archive source file exists
+  stat:
+    path: "/etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.sources"
+  register: archive_source_file
+
+- name: Remove archive source file
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.list
+    state: absent
+  when: archive_source_file.stat.exists
+
+- name: Check if security source file exists
+  stat:
+    path: "/etc/apt/sources.list.d/security_ubuntu_com_ubuntu.sources"
+  register: security_source_file
+
+- name: Remove security source file
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/security_ubuntu_com_ubuntu.list
+    state: absent
+  when: security_source_file.stat.exists
+
 - name: Package list update
   ansible.builtin.apt:
     update_cache: true
