Add tags and put list file removal in a block

--- a/roles/water-gkhs-common/tasks/main.yml
+++ b/roles/water-gkhs-common/tasks/main.yml
@@ -15,6 +15,7 @@
     state: present
     filename: stretch-backports
   when: ansible_distribution == 'Debian' and ansible_distribution_release == 'stretch'
+  tags: ubuntu-sources
 
 # - name: Install key
 #  apt_key:
@@ -32,36 +33,50 @@
     - deb http://security.ubuntu.com/ubuntu/ {{ ansible_distribution_release }}-security universe
   tags:
     - certbot
+    - ubuntu-sources
 
 #/etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.list
 #/etc/apt/sources.list.d/security_ubuntu_com_ubuntu.list /etc/apt/sources.list.d/security_ubuntu_com_ubuntu.sources
 
-- name: Check if archive source file exists
-  stat:
-    path: "/etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.sources"
-  register: archive_source_file
+- name: Remove old archive and security sources
+  tags: ubuntu-sources
 
-- name: Remove archive source file
-  ansible.builtin.file:
-    path: /etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.list
-    state: absent
-  when: archive_source_file.stat.exists
+  block:
+    - name: Check if archive source file exists
+      stat:
+        path: "/etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.sources"
+      register: archive_source_file
 
-- name: Check if security source file exists
-  stat:
-    path: "/etc/apt/sources.list.d/security_ubuntu_com_ubuntu.sources"
-  register: security_source_file
+    - name: Remove archive source file
+      ansible.builtin.file:
+        path: /etc/apt/sources.list.d/archive_ubuntu_com_ubuntu.list
+        state: absent
+      when: archive_source_file.stat.exists
 
-- name: Remove security source file
-  ansible.builtin.file:
-    path: /etc/apt/sources.list.d/security_ubuntu_com_ubuntu.list
-    state: absent
-  when: security_source_file.stat.exists
+    - name: Check if security source file exists
+      stat:
+        path: "/etc/apt/sources.list.d/security_ubuntu_com_ubuntu.sources"
+      register: security_source_file
+
+    - name: Remove security source file
+      ansible.builtin.file:
+        path: /etc/apt/sources.list.d/security_ubuntu_com_ubuntu.list
+        state: absent
+      when: security_source_file.stat.exists
+
+  rescue:
+    - name: "Failure warning"
+      ansible.builtin.debug:
+        msg: "Apt tasks failed"
+    - name: "Failure execution"
+      ansible.builtin.command:
+        cmd: "false"
 
 - name: Package list update
   ansible.builtin.apt:
     update_cache: true
     cache_valid_time: 21600
+  tags: ubuntu-sources
 
 - name: Install System Packages
   ansible.builtin.apt:
