--- a/roles/firth-dns/tasks/zones/aquarionics_cf.yml
+++ b/roles/firth-dns/tasks/zones/aquarionics_cf.yml
@@ -5,6 +5,7 @@
     - aquarionics_aws
     - aquarionics
     - cloudflare
+    - cloudflare_dns
   block:
     - name: (CF) Aquarionics.com. - A
       community.general.cloudflare_dns:
