--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -3,6 +3,10 @@ name: auto-merge
 on:
   pull_request:
 
+permissions:
+  actions: write
+  contents: read
+
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
