--- a/roles/water-gkhs-filebot/tasks/iplayer.yml
+++ b/roles/water-gkhs-filebot/tasks/iplayer.yml
@@ -79,8 +79,7 @@
     minute: "15"
     hour: 2
     user: "{{ media_user }}"
-    job:
-      "{{ media_home }}/bin/download_iplayer.sh | logger --tag Filebot --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port
+    job: "{{ media_home }}/bin/download_iplayer.sh | logger --tag Filebot --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port
       }}"
     cron_file: download_iplayer
     state: present
