Disable Bash validation in super-linter configuration due to issues with templated shell files

--- a/.github/super-linter.local.env
+++ b/.github/super-linter.local.env
@@ -190,8 +190,13 @@ SAVE_SUPER_LINTER_SUMMARY=true
 # VALIDATE_ANSIBLE 	true 	Flag to enable or disable the linting process of the Ansible language.
 # VALIDATE_ARM 	true 	Flag to enable or disable the linting process of the ARM language.
 # VALIDATE_BASH 	true 	Flag to enable or disable the linting process of the Bash language.
-VALIDATE_BASH=false
 # VALIDATE_BASH_EXEC 	true 	Flag to enable or disable the linting process of the Bash language to validate if file is stored as executable.
+
+## NA: Annoyingly, these break on templated shell files, so disable for now (Mirrored in github version)
+VALIDATE_BASH=false
+VALIDATE_BASH_EXEC=false
+## /NA
+
 # VALIDATE_CPP 	true 	Flag to enable or disable the linting process of the C++ language.
 # VALIDATE_CHECKOV 	true 	Flag to enable or disable the linting process with Checkov
 # VALIDATE_CLANG_FORMAT 	true 	Flag to enable or disable the linting process of the C++/C language with clang-format.
