--- a/roles/global_things/handlers/main.yml
+++ b/roles/global_things/handlers/main.yml
@@ -19,3 +19,7 @@
   ansible.builtin.service:
     name: nginx
     state: restarted
+
+- name: Reload systemd
+  ansible.builtin.systemd_service:
+    daemon_reload: yes
