Enable retry files in Ansible configuration

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ vault_password_file = ~/.vault_pass.txt
 fact_caching = jsonfile
 fact_caching_connection = ~/.ansible_facts
 fact_caching_timeout = 86400
-retry_files_enabled = False
+retry_files_enabled = True
 retry_files_save_path = ~/.ansible-retry
 
 interpreter_python=$VIRTUAL_ENV/bin/python
