Update MySQL configuration to allow connections from localhost

--- a/roles/firth-docker/files/mysql/docker.cnf
+++ b/roles/firth-docker/files/mysql/docker.cnf
@@ -1,3 +1,4 @@
 ; {{ ansible_managed }}
 [mysqld]
-bind-address             = 172.17.0.1
+; Docker & Localhost
+bind-address             = 172.17.0.1,127.0.0.1
